[package]
name = "bannered"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = "1.0.197"
tokio = {version = "1.37.0", features = ["full"]}
serde_json = "1.0.115"
sqlx = {version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres"]}
futures = "0.3.30"
axum-test = "14.8.0"
reqwest = {version = "0.12.2", features = ["json"]}
jwt = "0.16.0"
sha2 = "0.10.8"
hmac = "0.12.1"
